# WartID

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
wartid-server/: Cargo.toml  Rocket.example.toml  Rocket.toml  build.rs  discord_login.key  interactive-oauth2-test.sh
wartid-server-discord-bot/: Cargo.toml
wartid-server-discord-bot/src/: main.rs
wartid-server/migrations/2020-11-30-122841_create_users/: down.sql  up.sql
wartid-server/migrations/2020-12-11-174913_create_sessions/: up.sql
wartid-server/migrations/2020-12-18-175811_create_apps/: down.sql  up.sql
wartid-server/migrations/2020-12-23-104918_create_sessions_oauth2/: down.sql  up.sql
wartid-server/src/: config.rs  discord.rs  id.rs  main.rs  ructe.rs  schema.rs
wartid-server/src/model/: app.rs  menu.rs  mod.rs  oauth2session.rs  page_context.rs  scopes.rs  session.rs  user.rs
wartid-server/src/routes/: apps.rs  mod.rs  oauth2.rs  users.rs
wartid-server/src/utils/: jwt.rs  mod.rs
wartid-server/static/: authorize.css  index.css  login.css  login.js
wartid-server/templates/: base.rs.html  base_raw.rs.html  menu.rs.html
wartid-server/templates/login/: login.rs.html
wartid-server/templates/oauth2/: authorize.rs.html
wartid-server/templates/panel/: app_view.rs.html  apps_list.rs.html  home.rs.html  user_view.rs.html  users.rs.html
wartid-server/templates/partials/: flash.rs.html
