[package]
name = "wartid-server-discord-bot"
version = "0.1.0"
description = "I hate tokio, I spent 2h trying to include the Discord bot in the web server binary but Tokio kept panicking..."
authors = ["Edgar Onghena <dev@edgar.bzh>"]
edition = "2018"

[dependencies]
async-fs = "1.5.0"
async-trait = "0.1.53"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "8.0.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.10.10"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
ructe = "0.14.0"
