[package]
name = "wartid-server"
version = "0.2.0"
description = ""
authors = ["Edgar Onghena <dev@edgar.bzh>"]
edition = "2018"

[features]
discord_bot = ["ctrlc"]

[dependencies]
base64 = "0.13"
bcrypt = "0.9"
build-info = "0.0"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = { version = "3.1", optional = true }
diesel = { version = "1.4", features = ["chrono", "postgres", "uuidv07"] }
dotenv = "0.15"
git-version = "0.3"
jsonwebtoken = "7.2"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["diesel_postgres_pool"] }
ructe = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.1"
uuid = { version = "0.8", features = ["serde"] }

[build-dependencies]
build-info-build = "0.0"
ructe = "0.13"
