[package]
name = "wartid-server"
version = "0.2.0"
description = ""
authors = ["Edgar Onghena <dev@edgar.bzh>"]
edition = "2018"

[features]
discord_bot = ["ctrlc"]

[dependencies]
base64 = "0.13.0"
bcrypt = "0.12.1"
build-info = "0.0.26"
chrono = { version = "0.4.19", features = ["serde"] }
ctrlc = { version = "3.2.1", optional = true }
diesel = { version = "1.4.8", features = ["chrono", "postgres", "uuidv07"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
git-version = "0.3.5"
jsonwebtoken = "8.0.1"
lazy_static = "1.4.0"
log = "0.4.16"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
ructe = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.2.27"
uuid = { version = "0.8.2", features = ["serde"] }

[build-dependencies]
build-info-build = "0.0.26"
ructe = "0.14.0"
