[package]
name = "wartid-server"
version = "0.3.0"
description = ""
authors = ["Edgar Onghena <dev@edgar.bzh>"]
edition = "2021"

[dependencies]
base64 = "0.21.3"
bcrypt = "0.15.0"
build-info = "0.0.31"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.1", features = ["chrono", "postgres", "uuid"] }
diesel_migrations = "2.1"
dotenv = "0.15.0"
git-version = "0.3.5"
jsonwebtoken = "8.3"
lazy_static = "1.4"
log = "0.4.20"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_postgres_pool"] }
ructe = "0.17.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serenity = "0.11"
thiserror = "1.0"
time = "0.3.28"
tracing = "0.1.37"
tokio = { version = "1.32.0", default-features = false, features = ["sync"] }
uuid = { version = "1.4", features = ["serde"] }

[build-dependencies]
build-info-build = "0.0.31"
ructe = "0.17.0"
